# sbom-cli

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  sample-cyclonedx-1.7.json  sample-sbom.json
sbom_cli/: __init__.py  __main__.py  cli.py  config.py  core.py  utils.py
tests/: __init__.py  test_cli.py
